default/objects/NVMConnect__ProcessedDialEntry__c/NVMConnect__ProcessedDialEntry__c.object-meta.xml
<CustomObject>
    <label>Processed Dial Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processed Dial Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>