default/objects/NVMConnect__ProcessedDialEntry__c/fields/NVMConnect__Assignee__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProcessedDialEntries</relationshipName>
    <type>Lookup</type>
</CustomField>