default/objects/NVMConnect__ProcessedDialEntry__c/fields/NVMConnect__Complete__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the call has been made</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>