default/objects/NVMConnect__ProcessedDialEntry__c/fields/NVMConnect__Description__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>