default/objects/NVMConnect__ProcessedDialEntry__c/fields/NVMConnect__Outcome__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Outcome__c</fullName>
    <inlineHelpText>Outcome of the call.</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
                <default>true</default>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>NoPhoneNumbers</fullName>
                <label>Skipped - No Phone Number to Dial</label>
            </value>
            <value>
                <fullName>NoFocusObject</fullName>
                <label>Skipped - The focus object was not available to the agent.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>