default/objects/NVMConnect__ProcessedDialEntry__c/fields/NVMConnect__Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>